Fix total votes alignment

--- a/res/css/views/messages/_MPollBody.pcss
+++ b/res/css/views/messages/_MPollBody.pcss
@@ -42,6 +42,7 @@ Please see LICENSE files in the repository root for full details.
         justify-content: end;
         color: $secondary-content;
         font-size: $font-12px;
+        max-width: 550px;
 
         .mx_Spinner {
             flex: 0;
